tests/reference/ast-fixed_form_1-3be6d43.stderr
tokenizer error: Expecting terminating symbol for program
 --> tests/errors/fixed_form_1.f:2:7
  |
2 |       xinteger :: y
  |       ^ 
